# orbital-credit

./: .env.example  .gitignore  README.md
backend/api-gateway/: .env.example  README.md  alembic.ini  pyproject.toml
backend/api-gateway/alembic/: env.py
backend/api-gateway/alembic/versions/: 0001_initial_core_tables.py  0002_add_satellite_assessment_fields.py  0003_add_debt_assessment_status_fields.py  0004_add_debt_metric_fields.py  0005_add_social_assessment_fields.py  0006_add_jlg_linkages_table.py  0007_add_decision_rule_metadata_fields.py
backend/api-gateway/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/api-gateway/app/core/: __init__.py  audit.py  cache.py  correlation.py  errors.py  idempotency.py  logging.py  metrics.py  rbac.py  request_context.py
backend/api-gateway/app/jobs/: run_retention_purge.py
backend/api-gateway/app/services/: __init__.py  assessment_orchestrator.py  retention.py
backend/api-gateway/app/services/agent/: __init__.py  graph.py
backend/api-gateway/tests/core/: test_metrics_and_rbac.py
backend/api-gateway/tests/debt/: test_consent_state_model.py  test_decision_input_pipeline.py  test_orchestrator_integration.py  test_resilience.py
backend/api-gateway/tests/decision/: test_decision_engine.py  test_regression_golden.py
backend/api-gateway/tests/satellite/: test_feature_calculators.py  test_transport_resilience.py
backend/api-gateway/tests/social/: test_client.py  test_default_penalty.py  test_orchestrator.py  test_social_decision_input_pipeline.py  test_social_resilience.py
(+67 files in other folders)
